[1.4]
 - Settings extended (Close tab when history.back() not working)
 - Restructured code (added model and merged the content-scripts)

[1.3]
 - Removed jQuery dependency
 - Code optimization

[1.2]
 - Locale specific settings
 - Differ pixel tolerance between maximized and windowed browser
 - Optimized settings page for hdpi screens
 - Minified js-files

[1.1]
 - Locale specific info texts
 - Lighten the html markup (visual now done with css-pseudo-elements)
 - Javascript of settings now based on jquery
 - Trigger an event when extension is loaded completely

[1.0]
 - Navigate back when click on the left site of the screen
 - Optional visual (arrow on semitransparent background)
 - Configuration of the pixel tolerance and toggle of the visual