@@ -1,3 +1,3 @@
 /*! (c) Philipp König under GPL-3.0 */
 
-"use strict";!function(){window.ext=function(e){this.run=function(){o(),t()};var n=!1,o=function(){var o=["pxTolerance","showIndicator","closeTab"];chrome.storage.sync.get(o,function(i){o.forEach(function(n){void 0!==i[n]&&(e.config[n]=i[n])}),n&&document.dispatchEvent(new CustomEvent("DOMContentLoaded"))})},i=function(){var n=0!==window.screenX||0!==window.screenY||window.screen.availWidth!==window.innerWidth;return e.config.pxTolerance[n?"windowed":"maximized"]},t=function(){document.addEventListener("mousedown",function(n){if(n.pageX<i()&&0===n.button){var o=!0;window.onbeforeunload=window.onpopstate=function(){o=!1},window.history.back(),setTimeout(function(){e.config.closeTab&&o&&chrome.extension.sendMessage({type:"closeTab"})},200)}},{passive:!0}),document.addEventListener("DOMContentLoaded",function(){n=!0;var o=document.createElement("div");o.id=e.ids.main,document.body.appendChild(o),o.style.width=i()+"px",e.config.showIndicator&&(o.classList.add(e.classes.visible),document.addEventListener("mousemove",function(n){n.pageX<i()?o.classList.add(e.classes.hover):o.classList.remove(e.classes.hover)},{passive:!0}),document.addEventListener("visibilitychange",function(){document.hidden&&o.classList.remove(e.classes.hover)}),window.addEventListener("resize",function(){o.style.width=i()+"px"},{passive:!0})),s()})},s=function(){document.dispatchEvent(new CustomEvent(e.events.loaded,{detail:{pxTolerance:i(),showIndicator:e.config.showIndicator},bubbles:!0,cancelable:!1}))}}}(),function(){var e={ids:{main:"blockbyte-lsb-main"},classes:{visible:"blockbyte-lsb-visible",hover:"blockbyte-lsb-hover"},events:{loaded:"blockbyte-lsb-loaded"},config:{pxTolerance:{windowed:20,maximized:1},showIndicator:!0,closeTab:!1}};new window.ext(e).run()}();
+"use strict";!function(){window.ext=function(e){this.run=function(){i(),t()};var n=!1,i=function(){var i=["pxTolerance","showIndicator","closeTab"];chrome.storage.sync.get(i,function(o){i.forEach(function(n){void 0!==o[n]&&(e.config[n]=o[n])}),n&&document.dispatchEvent(new CustomEvent("DOMContentLoaded"))})},o=function(){var n=0!==window.screenX||0!==window.screenY||window.screen.availWidth!==window.innerWidth;return e.config.pxTolerance[n?"windowed":"maximized"]},t=function(){document.addEventListener("mousedown",function(n){var i=o(),t=document.querySelector("#"+e.ids.indicator);if(t.classList.contains(e.classes.visible)&&t.classList.contains(e.classes.hover)&&i<e.config.indicatorWidth&&(i=e.config.indicatorWidth),n.pageX<i&&0===n.button){var s=!0;window.onbeforeunload=window.onpopstate=function(){s=!1},window.history.back(),setTimeout(function(){e.config.closeTab&&s&&chrome.extension.sendMessage({type:"closeTab"})},200)}},{passive:!0}),document.addEventListener("DOMContentLoaded",function(){n=!0;var i=document.createElement("div");i.id=e.ids.indicator,document.body.appendChild(i),i.style.width=o()+"px",e.config.showIndicator&&(i.classList.add(e.classes.visible),document.addEventListener("mousemove",function(n){n.pageX<o()?i.classList.add(e.classes.hover):(void 0===n.pageX||n.pageX>e.config.indicatorWidth)&&i.classList.remove(e.classes.hover)},{passive:!0}),document.addEventListener("visibilitychange",function(){document.hidden&&i.classList.remove(e.classes.hover)}),window.addEventListener("resize",function(){i.style.width=o()+"px"},{passive:!0})),s()})},s=function(){document.dispatchEvent(new CustomEvent(e.events.loaded,{detail:{pxTolerance:o(),showIndicator:e.config.showIndicator},bubbles:!0,cancelable:!1}))}}}(),function(){var e={ids:{indicator:"blockbyte-lsb-indicator"},classes:{visible:"blockbyte-lsb-visible",hover:"blockbyte-lsb-hover"},events:{loaded:"blockbyte-lsb-loaded"},config:{pxTolerance:{windowed:20,maximized:1},showIndicator:!0,closeTab:!1,indicatorWidth:40}};new window.ext(e).run()}();
