@@ -1,1 +1,1 @@
-{"manifest_version":2,"name":"__MSG_extension_name__","short_name":"__MSG_extension_name__","description":"__MSG_extension_desc__","default_locale":"en","version":"1.4.0","minimum_chrome_version":"55","background":{"scripts":["js/model.js"],"persistent":false},"content_scripts":[{"css":["css/style.css"],"js":["js/extension.js"],"matches":["http://*/*","https://*/*"],"run_at":"document_start"}],"web_accessible_resources":["img/*"],"options_ui":{"page":"html/settings.html","chrome_style":true},"icons":{"256":"img/icon/256x256.webp","128":"img/icon/128x128.webp","48":"img/icon/48x48.webp"},"permissions":["storage"]}
+{"manifest_version":2,"name":"__MSG_extension_name__","short_name":"__MSG_extension_name__","description":"__MSG_extension_desc__","default_locale":"en","version":"1.4.1","minimum_chrome_version":"55","background":{"scripts":["js/model.js"],"persistent":false},"content_scripts":[{"css":["css/style.css"],"js":["js/extension.js"],"matches":["http://*/*","https://*/*"],"run_at":"document_start"}],"web_accessible_resources":["img/*"],"options_ui":{"page":"html/settings.html","chrome_style":true},"icons":{"256":"img/icon/256x256.webp","128":"img/icon/128x128.webp","48":"img/icon/48x48.webp"},"permissions":["storage"]}
