@@ -1,6 +1,6 @@
 {
   "name": "Leftside Back",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "license": "GPL-3.0",
   "author": "Philipp König",
   "homepage": "https://blockbyte.de/extensions",
