@@ -1,7 +1,8 @@
 @import "include/vars";
 @import "include/mixins";
 
-body > div#blockbyte-lsb-main {
+
+body > div#blockbyte-lsb-indicator {
   position: fixed;
   top: 0;
   left: 0;
